style(profile): overflow scrollbar fix

--- a/src/app/pages/dashboard/profile/profile-sidebar/profile-sidebar.component.scss
+++ b/src/app/pages/dashboard/profile/profile-sidebar/profile-sidebar.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   @apply bg-gray-100;
-  height: calc(100vh - var(--header-height));
+  height: 100%;
 }
 
 .profile-sidebar {
